k8s/openshift-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: questshift
  labels:
    app.kubernetes.io/part-of: questshift
spec:
  to:
    kind: Service
    name: questshift-ui
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
